mysql -> postgres + fix